# pylambda-bot

./: .gitignore  LICENSE  README.md  build.sh  config.yaml  lambda_function.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
pylambda_bot/: __init__.py
pylambda_bot/message_services/: __init__.py  base.py  slack.py
pylambda_bot/nlp_engines/: __init__.py  base.py  echo.py  openai.py
tests/: test_message_services.py  test_nlp_engines.py
